syntax = "proto3";

package mixnet;

service MixServer {
  rpc ForwardMessage (ForwardMessageRequest) returns (ForwardMessageResponse);
  rpc PollMessages (PollMessagesRequest) returns (PollMessagesResponse);
  rpc Register (RegisterRequest) returns (RegisterResponse);
  rpc WaitForStart (WaitForStartRequest) returns (WaitForStartResponse);
}

message ForwardMessageRequest {
  bytes payload = 1;
  int32 round = 2;
}

message ForwardMessageResponse {
  string status = 1;
}

message PollMessagesRequest {
  string client_id = 1;
}

message PollMessagesResponse {
  repeated bytes payloads = 1;
}

message RegisterRequest {
  string client_id = 1;
}

message RegisterResponse {
  bool status = 1;
}

message WaitForStartRequest {
  string client_id = 1;
}

message WaitForStartResponse {
  bool ready = 1;
  int32 round_duration = 2;  // Round duration in seconds
}

service Client {
  rpc PrepareMessage (PrepareMessageRequest) returns (PrepareMessageResponse);
}

message PrepareMessageRequest {
  string message = 1;
  bytes recipient_pubkey = 2;
  string recipient_addr = 3;
}

message PrepareMessageResponse {
  bool status = 1;
}
